Criação do projeto angular, componentes, CRUD

--- a/revisao-Angular/src/app/home/home.component.html
+++ b/revisao-Angular/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<main class="container-fluid p-0">
+    <!-- banner -->
+    <div class="d-flex justify-content-center">
+       <div class=" w-50 position-absolute titulo" style="color:#b3b0b0;">
+            <h1 class="text-center text mt-5">Horti frut</h1>
+            <p class="text-center mt-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui libero veniam delectus, suscipit quia, ut odio
+                architecto ea, rem ratione quos. Quod rerum tempora nesciunt nulla rem reiciendis. Iste, in!</p>
+       </div>
+        <img class="w-100 img-fruta" src="https://images5.alphacoders.com/311/thumb-1920-311171.jpg" alt="">
+    </div>
+</main>
