--- a/revisao-Angular/src/app/contato/contato.component.html
+++ b/revisao-Angular/src/app/contato/contato.component.html
@@ -1,1 +1,22 @@
-<p>contato works!</p>
+<main class="container">
+    <form action="">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-6">
+                <h1 class="text-center mt-5 mb-5">Contate-nos</h1>
+                    <div class="form-group">
+                        <label for="">E-mail:</label> 
+                        <input type="email" class="form-control" placeholder="email..." required>          
+                     </div>
+
+                    <div class="form-group">
+                        <label for="">Comentário:</label> 
+                        <textarea name="" class="form-control" placeholder="Escreva algo..." id="" cols="60" rows="5"></textarea>       
+                    </div>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-info btn-lg mb-5">Enviar</button>
+                </div>
+            </div>
+        </div>
+        
+    </form>
+</main>
