--- a/revisao-Angular/src/app/footer/footer.component.html
+++ b/revisao-Angular/src/app/footer/footer.component.html
@@ -1,7 +1,28 @@
-<footer class="w-100" style="background-color: darkslategray; height: 300px;">
-    <div class="row">
-        <div class="col md-4"></div>
-        <div class="col md-4"></div>
-        <div class="col md-4"></div>
+<footer class="w-100 container-fluid" style="background-color: #26262d; height: 300px;">
+    <div class="row p-3">
+        <div class="col md-4 text-center mt-3">
+            <h6 class="text-roboto" style="color:#3a4c0f">Onde ficamos?</h6>
+            <p>Rua, 000 - São Paulo, SP</p>
+        </div>
+        <div class="col md-4 text-center mt-3">
+            <h6 class="text-roboto" style="color:#3a4c0f">Páginas</h6>
+           <ul class="p-0"> <li class="list-style-none"><a routerLink="/home">Home</a></li>
+            <li class="list-style-none"><a routerLink="/sobre">sobre</a></li>
+            <li class="list-style-none"><a routerLink="/contato">Contato</a></li>
+            <li class="list-style-none"><a routerLink="/loja">Loja</a></li></ul>
+        </div>
+        <div class="col md-4 text-center mt-3">
+            <h6 class="text-roboto" style="color:#3a4c0f">Contato</h6>
+            <li class="text-center"><a href="">(00)00000-0000</a></li>
+            <li class="text-center"><a href="">(00)00000-0000</a></li>
+            <li class="text-center"><a href="">(00)00000-0000</a></li>
+        </div>
     </div>
+    <div class="d-flex justify-content-center">
+        <h6 class="text-roboto" style="color:#3a4c0f">Siga-nos</h6>
+        <!-- <fa-icon [icon]="" class=""></fa-icon>
+        <fa-icon [icon]="" class=""></fa-icon>
+        <fa-icon [icon]="" class=""></fa-icon> -->
+    </div>
+    <p class="text-center mt-3">&copy;Generation</p>
 </footer>
