--- a/revisao-Angular/src/app/navbar/navbar.component.html
+++ b/revisao-Angular/src/app/navbar/navbar.component.html
@@ -1,15 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="#" routerLink="/home">Logo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
+      <ul class="navbar-nav d-flex justify-content-center">
         <li class="nav-item active">
           <a class="nav-link" href="#" routerLink="/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#" routerLink="/sobre">Sobre</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#" routerLink="/contato">Contato</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" routerLink="/loja">Loja</a>
         </li>
     
       </ul>
